--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -1,20 +1,29 @@
-# Home Assistant integration (MQTT discovery)
-homeassistant: false
-
-# allow new devices to join
+homeassistant: true
 permit_join: true
-
-# MQTT settings
 mqtt:
-  # MQTT base topic for zigbee2mqtt MQTT messages
-  base_topic: zigbee2mqtt
-  # MQTT server URL
-  server: 'mqtt://localhost'
-  # MQTT server authentication, uncomment if required:
-  # user: my_user
-  # password: my_password
-
-# Serial settings
+  base_topic: zigbee
+  server: 'mqtt://mosquitto'
 serial:
-  # Location of CC2531 USB sniffer
   port: /dev/ttyACM0
+devices: devices.yaml
+groups: groups.yaml
+advanced:
+  availability_timeout: 60
+  report: true
+  pan_id: 22047
+  ext_pan_id:
+    - 88
+    - 51
+    - 191
+    - 55
+    - 133
+    - 152
+    - 207
+    - 132
+  channel: 11
+  network_key: '!secret network_key'
+  log_level: debug
+  log_directory: data/log/%TIMESTAMP%
+  log_output:
+    - console
+    - file
