--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "semver": "*",
     "winston": "*",
     "zigbee-herdsman": "0.12.64",
-    "zigbee-herdsman-converters": "12.0.51"
+    "zigbee-herdsman-converters": "github:nattgris/zigbee-herdsman-converters#deploy-12.0.51"
   },
   "devDependencies": {
     "eslint": "*",
