Add custom 0-10 V 2 channel dimmer w/ additional on/off output

--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -9,6 +9,8 @@ frontend:
   port: 8080
 experimental:
   new_api: true
+external_converters:
+  - kitchen-light.js
 device_options:
   debounce: 1
   debounce_ignore:
