--- a/data/configuration.yaml
+++ b/data/configuration.yaml
@@ -4,7 +4,7 @@ mqtt:
   base_topic: zigbee
   server: 'mqtt://mosquitto'
 serial:
-  port: /dev/ttyACM0
+  port: /dev/ttyUSB0
 frontend:
   port: 8080
 experimental:
@@ -20,7 +20,7 @@ groups: groups.yaml
 advanced:
   availability_timeout: 60
   report: true
-  pan_id: 22047
+  pan_id: 65115
   ext_pan_id:
     - 88
     - 51
